check safety and code safety